8305711: Arm: C2 always enters slowpath for monitorexit

Backport-of: c67bbcea92919fea9b6f7bbcde8ba4488289d174