src/hotspot/cpu/arm/macroAssembler_arm.cpp
@@ -3085,7 +3085,7 @@ void MacroAssembler::fast_unlock(Register Roop, Register Rbox, Register Rscratch
   // Restore the object header
   bool allow_fallthrough_on_failure = true;
   bool one_shot = true;
-  cas_for_lock_release(Rmark, Rbox, Roop, Rscratch, done, allow_fallthrough_on_failure, one_shot);
+  cas_for_lock_release(Rbox, Rmark, Roop, Rscratch, done, allow_fallthrough_on_failure, one_shot);
 
   bind(done);
 
